--- a/Radiance-App/radiance_flutter/pubspec.yaml
+++ b/Radiance-App/radiance_flutter/pubspec.yaml
@@ -24,7 +24,9 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
 
+  # Custom dependencies
   connectivity: ^0.4.6+1
+  cached_network_image: ^2.0.0-rc
 
 dev_dependencies:
   flutter_test:
