--- a/Radiance-App/radiance_flutter/pubspec.yaml
+++ b/Radiance-App/radiance_flutter/pubspec.yaml
@@ -26,8 +26,8 @@ dependencies:
 
   # Custom dependencies
   connectivity: ^0.4.6+1
-  cached_network_image: ^2.0.0-rc
-
+  http: ^0.12.0+2
+  
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -38,15 +38,9 @@ dev_dependencies:
 
 # The following section is specific to Flutter.
 flutter:
-
-  # The following line ensures that the Material Icons font is
-  # included with your application, so that you can use the icons in
-  # the material Icons class.
   uses-material-design: true
-
-  # To add assets to your application, add an assets section, like this:
   assets:
-    - lib/assets/images/   
+    - lib/assets/images/
   
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
@@ -58,18 +52,6 @@ flutter:
   # in this "flutter" section. Each entry in this list should have a
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
-  # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
   fonts:
     - family: Lineto-Circular
       fonts:
