--- a/Radiance-App/radiance_flutter/pubspec.yaml
+++ b/Radiance-App/radiance_flutter/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
   # Custom dependencies
   connectivity: ^0.4.6+1
   http: ^0.12.0+2
+  shared_preferences: ^0.5.6
   
 dev_dependencies:
   flutter_test:
