--- a/Radiance-App/radiance_flutter/android/app/build.gradle
+++ b/Radiance-App/radiance_flutter/android/app/build.gradle
@@ -38,7 +38,7 @@ android {
 
     defaultConfig {
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
-        applicationId "com.example.radiance_flutter"
+        applicationId "com.cyberfox.radiance"
         minSdkVersion 16
         targetSdkVersion 28
         versionCode flutterVersionCode.toInteger()
