--- a/Radiance-App/radiance_flutter/android/app/src/main/AndroidManifest.xml
+++ b/Radiance-App/radiance_flutter/android/app/src/main/AndroidManifest.xml
@@ -7,7 +7,7 @@
          FlutterApplication and put your custom class here. -->
     <application
         android:name="io.flutter.app.FlutterApplication"
-        android:label="radiance_flutter"
+        android:label="Radiance"
         android:icon="@mipmap/ic_launcher">
         <activity
             android:name=".MainActivity"
