--- a/Radiance-App/radiance_flutter/pubspec.yaml
+++ b/Radiance-App/radiance_flutter/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   connectivity: ^0.4.6+1
   http: ^0.12.0+2
   shared_preferences: ^0.5.6
+  flushbar: ^1.9.1
   
 dev_dependencies:
   flutter_test:
